2004-11-24 Scott Dattalo <scott@dattalo.com>
	* cli/input.cc: yet another attempt to fix tab completion.
	* modules/binary_indicator.cc, modules/binary_indicator.h
	modules/bitlog.h, modules/led.h, modules/logic.cc, modules/logic.h,
	modules/paraface.h, modules/resistor.cc, modules/video.cc,
	modules/video.h: Changed IO_input to IOPIN for all pins. This
	is an attempt to remove a warning message regarding IO_input that
	is generated while building under CygWin.
	* modules/makefile.mingw, plat/win32/gpsim.nsi: Renamed modules.dll
	to a slightly more descriptive gpsim_modules.dll 
	* src/i2c-ee.cc, src/p12.cc, src/p16f62x.cc, src/p17c75x.cc, 
	src/stimuli.h: exchanged references to IO_input to IOPIN.

2004-11-23 Scott Dattalo <scott@dattalo.com>
	* plat/win32/gpsim.def, modules/modules.vcproj: MSVC sync
	* modules/*.cc: removed (char *) casts in calls to new_name()
	* gpsim/main.cc: removed some unnecessary includes.
	* gpsim/gpsim.vcproj: MSVC sync
	* cli/input.cc: removed some debug stuff
	* cli/cmd_log.cc: removed unreferenced variable.

2004-11-23 Borut Razem <borut.razem@siol.net>
	* plat/win32/gpsim.def, modules/modules.vcproj: MSVC sync

2004-11-23 Scott Dattalo <scott@dattalo.com>
	* cli/input.cc: The tab completion fix for window's now causes
	a crash on Linux. Sigh. Now both oses are supported (without crashes)
	
2004-11-23 Scott Dattalo <scott@dattalo.com>
	* cli/input.cc: Fixed tab completion related window's crash
	* gui/gui_symbols.cc: Windows doesn't support strndup()
	
2004-11-22 Scott Dattalo <scott@dattalo.com>
	* cli/input.cc: buffer overflow in command_generator().
	* src/ioports.cc, src/pic-registers.cc, src/registers.cc,
	src/stimuli.cc: valgrind check - unitialized memory.
	* src/value.h, src/value.cc, src/interface.h, src/symbol.cc,
	src/symbol.h, gui/gui_profile.cc, gui/gui_regwin.cc, gui/gui_regwin.h,
	gui/gui_src.cc, gui/gui_src.h, gui/gui_src_asm.cc, gui/gui_stack.cc,
	gui/gui_symbols.cc, gui/gui_watch.cc, gui/gui_watch.h: